// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveCurrentConfigurationButton It renders properly when disabled 1`] = `
<body>
  <div>
    <button
      class="css-mk7eo3-button"
      disabled=""
      type="button"
    >
      <span
        class="css-1mhnkuh"
      >
        Remove current configuration
      </span>
    </button>
  </div>
</body>
`;

exports[`RemoveCurrentConfigurationButton It renders properly when enabled 1`] = `
<body>
  <div>
    <button
      class="css-mk7eo3-button"
      type="button"
    >
      <span
        class="css-1mhnkuh"
      >
        Remove current configuration
      </span>
    </button>
  </div>
</body>
`;
